# thumbnailer

./: Cargo.toml
src/: main.rs
thumbnailer-dart/: .metadata  README.md  ffigen.yaml  pubspec.yaml
thumbnailer-dart/example/: pubspec.yaml
thumbnailer-dart/example/lib/: main.dart
thumbnailer-dart/lib/: thumbnailer.dart  thumbnailer_bindings.dart  thumbnailer_bindings_generated.dart
thumbnailer-dart/src/: CMakeLists.txt  thumbnailer.c
thumbnailer-rs/: Cargo.toml
thumbnailer-rs/src/: lib.rs
thumbnailer_c/: Cargo.toml
thumbnailer_c/src/: lib.rs
