[package]
name = "thumbnailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
av-codec = "^0.2"
av-data = "^0.3"
av-format = "^0.3"
image = "0.24.1"
# av-data = "0.2.2"
# av-codec = "0.2.2"
# av-format = "0.2.2"
matroska = { version = "0.1.0", git = "https://github.com/rust-av/matroska" }
av-vorbis = { git = "https://github.com/rust-av/av-vorbis" }
libopus = { version = "0.1.0", git = "https://github.com/rust-av/opus-rs", features = ["codec-trait"] }
libvpx = { version = "0.1.0", git = "https://github.com/rust-av/vpx-rs", features = ["codec-trait"] }
thiserror = "1.0.30"
